# magnetic_camera_control

./: CMakeLists.txt  README.md  package.xml
src/: magnetic_camera_control.cpp
